--- a/components/dataprep/dataprep.yaml
+++ b/components/dataprep/dataprep.yaml
@@ -15,7 +15,7 @@ outputs:
   output_data:
     type: uri_folder
 code: ./code
-environment: azureml:aml-Pillow:4
+environment: azureml:aml-Pillow-cli:0.1.0
 resources:
   instance_count: 1
 command: 'python dataprep.py --data ${{inputs.data}} --output_data ${{outputs.output_data}}'
