--- a/components/dataprep/data_split.yaml
+++ b/components/dataprep/data_split.yaml
@@ -7,8 +7,7 @@ is_deterministic: true
 type: command
 
 code: ./code
-command: '
-  python traintestsplit.py
+command: 'python traintestsplit.py
   --datasets ${{inputs.animal_1}} ${{inputs.animal_2}} ${{inputs.animal_3}}
   --split_size ${{inputs.train_test_split_factor}}
   --training_data ${{outputs.training_data}} --testing_data ${{outputs.testing_data}}
