Try again after fixing the typo

--- a/.github/workflows/azure-ai.yaml
+++ b/.github/workflows/azure-ai.yaml
@@ -15,8 +15,10 @@ env:
 
 jobs:
   azure-pipeline:
-    runs-on: self-hosted
-    steps:
+    runs-on: ubuntu-latest
+    
+    # runs-on: self-hosted
+
     - name: Check out repository
       uses: actions/checkout@v4
       
@@ -35,8 +37,8 @@ jobs:
           az extension add --name ml -y
           az configure --defaults group=$GROUP workspace=$WORKSPACE location=$LOCATION
           az ml job create --file ./pipelines/animals-classification.yaml --set name=animals-classification-${{ github.sha }}-${{ github.run_id }}
-          VERSION=$(az ml model -n animal_classification --query "[0].version" -o tsv)
-          echo "Latest version of model animal_classification is: $VERSION"
+          VERSION=$(az ml model -n animal-classification --query "[0].version" -o tsv)
+          echo "Latest version of model animal-classification is: $VERSION"
           echo "::set-output name=latest_version::$VERSION"
 
     - name: Download model
@@ -46,6 +48,6 @@ jobs:
         inlineScript: |
           az extension add --name ml -y
           az configure --defaults group=$GROUP workspace=$WORKSPACE location=$LOCATION
-          az ml model download --name animal_classification --download-path ./model --version ${{ steps.azure-ml-pipeline.outputs.latest_version }}"
+          az ml model download --name animal-classification --download-path ./model --version ${{ steps.azure-ml-pipeline.outputs.latest_version }}"
     
           
