--- a/environment/compute.yaml
+++ b/environment/compute.yaml
@@ -15,7 +15,7 @@ schedules:
     trigger:
       expression: 00 20 * * 1,2,3,4,5
       time_zone: UTC
-      start_time: "18:30"
+      start_time: "2023-10-16T15:00:00"
       type: cron
 idle_time_before_shutdown: PT30M
 idle_time_before_shutdown_minutes: 30
