Pipeline with cli-created-machine

--- a/pipelines/animals-classification.yaml
+++ b/pipelines/animals-classification.yaml
@@ -15,7 +15,7 @@ outputs:
 
 settings:
   # default_compute: serverless
-  default_compute: azureml:zinnige-naam
+  default_compute: azureml:cli-created-machine
 
 jobs:
   data_prep_pandas:
