Testing the pipeline in Azure

--- a/components/training/training.yaml
+++ b/components/training/training.yaml
@@ -11,6 +11,7 @@ command: 'python train.py
   --output_folder ${{outputs.output_folder}}
   --epochs ${{inputs.epochs}}
   '
+compute: local
 
 inputs:
   epochs:
