--- a/pipelines/animals-classification.yaml
+++ b/pipelines/animals-classification.yaml
@@ -86,7 +86,7 @@ jobs:
     type: command
     component: azureml://registries/azureml/components/register_model/versions/0.0.9
     inputs:
-      model_name: animal_classification
+      model_name: animal-classification
       model_type: custom_model
       model_path: ${{parent.jobs.training.outputs.output_folder}}
     outputs:
