--- a/.github/workflows/azure-ai-push-automation.yaml
+++ b/.github/workflows/azure-ai-push-automation.yaml
@@ -10,7 +10,7 @@ jobs:
     uses: ./.github/workflows/azure-ai.yaml
     with:
       # Set these to "true" if you want to run these pipeline steps or "false" to skip it
-      create_compute: true
+      create_compute: false
       train_model: false
       skip_training_pipeline: true
       deploy_model: false
