--- a/.github/workflows/azure-ai.yaml
+++ b/.github/workflows/azure-ai.yaml
@@ -85,10 +85,10 @@ jobs:
       uses: dcarbone/install-yq-action@v1.1.1      
 
     - name: read-yaml-file
-      uses: mikefarah/yq@master
       id: read_compute_yaml
-      with:
-        cmd: yq '.name' ./environment/compute.yaml
+      run:
+        NAME=$(yq ".name" ./environment/compute.yaml)
+        echo "::set-output name=name::$NAME"
 
     - name: Create compute
       uses: azure/CLI@v1
@@ -110,8 +110,8 @@ jobs:
         inlineScript: |
           az extension add --name ml -y
           az configure --defaults group=$GROUP workspace=$WORKSPACE location=$LOCATION
-          az ml compute start --name ${{ steps.read_compute_yaml.outputs.results }}
-          echo ${{ steps.read_compute_yaml.outputs.results }}
+          az ml compute start --name ${{ steps.read_compute_yaml.outputs.name }}
+          echo ${{ steps.read_compute_yaml.outputs.name }}
       continue-on-error: true
     
     - name: Execute Azure ML Script
