--- a/.github/workflows/azure-ai.yaml
+++ b/.github/workflows/azure-ai.yaml
@@ -109,8 +109,8 @@ jobs:
         inlineScript: |
           az extension add --name ml -y
           az configure --defaults group=$GROUP workspace=$WORKSPACE location=$LOCATION
-          az ml compute start --name "$name"
-          echo "$name"
+          az ml compute start --name $name
+          echo $name
       continue-on-error: true
     
     - name: Execute Azure ML Script
