--- a/components/training/conda.yaml
+++ b/components/training/conda.yaml
@@ -8,7 +8,7 @@ dependencies:
   - scikit-learn=0.24.2
   - scipy=1.7.1
   - pandas>=1.1,<1.2
-  - tensorflow==2.4.1
+  - tensorflow
   - pip:
     - inference-schema[numpy-support]==1.3.0
     - xlrd==2.0.1
