--- a/components/dataprep/dataprep.yaml
+++ b/components/dataprep/dataprep.yaml
@@ -1,3 +1,4 @@
+$schema: https://azuremlschemas.azureedge.net/latest/commandComponent.schema.json
 ## Execute as: az ml component create --file components/dataprep/dataprep.yaml
 name: data_prep_image_resize_cli
 ## Semver ?
@@ -7,6 +8,14 @@ display_name: Data preparation, Image Resizing
 is_deterministic: True
 type: command
 description: Reads a data asset of images and preprocesses them by resizing them to 64 to 64.
+
+environment: azureml:aml-Pillow-cli:0.1.0
+resources:
+  instance_count: 1
+
+code: ./code
+command: 'python dataprep.py --data ${{inputs.data}} --output_data ${{outputs.output_data}}'
+
 inputs:
   data:
     type: uri_folder
@@ -14,8 +23,3 @@ inputs:
 outputs:
   output_data:
     type: uri_folder
-code: ./code
-environment: azureml:aml-Pillow-cli:0.1.0
-resources:
-  instance_count: 1
-command: 'python dataprep.py --data ${{inputs.data}} --output_data ${{outputs.output_data}}'
