--- a/components/training/training.yaml
+++ b/components/training/training.yaml
@@ -1,17 +1,17 @@
+$schema: https://azuremlschemas.azureedge.net/latest/commandComponent.schema.json
 version: 0.1.0
 type: command
-name: training
+name: training_cli
 display_name: Training an AI model
 description: Trains an AI model by inputting a lot of training and testing data.
 
 code: ./code
-environment: azureml:aml-Tensorflow:0.1.0
+environment: azureml:aml-Tensorflow-cli:0.1.0
 command: 'python train.py
-  --training_folder ${{inputs.training_folder}} --testing_data ${{inputs.testing_folder}}
+  --training_folder ${{inputs.training_folder}} --testing_folder ${{inputs.testing_folder}}
   --output_folder ${{outputs.output_folder}}
   --epochs ${{inputs.epochs}}
   '
-compute: local
 
 inputs:
   epochs:
