feat: Test flows in 2024

--- a/.github/workflows/azure-ai-push-automation.yaml
+++ b/.github/workflows/azure-ai-push-automation.yaml
@@ -1,9 +1,8 @@
 name: Azure ML Automated Pushing pipeline
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
+    
 
 jobs:
   start:
