--- a/.github/workflows/manual.yaml
+++ b/.github/workflows/manual.yaml
@@ -6,6 +6,10 @@ env:
   WORKSPACE: mlops-nathan
   LOCATION: westeurope
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   azure-pipeline:
     runs-on: ubuntu-latest
@@ -16,7 +20,9 @@ jobs:
       - name: Azure Login
         uses: azure/login@v2
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
       
       - name: Azure test - Get Compute
         uses: Azure/CLI@v2
@@ -24,5 +30,5 @@ jobs:
           azcliversion: 2.61.0 # Currently the latest, but best to specify for reproducibility
           inlineScript: |
             az extension add --name ml -y
-            az configure --defaults group=$GROUP workspace=$WORKSPACE location=$LOCATION
-            az ml compute list
+            az configure --defaults group=$GROUP workspace=$WORKSPACE location=$LOCATION --debug
+            az ml compute list --debug
