--- a/.github/workflows/manual.yaml
+++ b/.github/workflows/manual.yaml
@@ -12,7 +12,7 @@ permissions:
 
 jobs:
   azure-pipeline:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
