--- a/.github/workflows/manual.yaml
+++ b/.github/workflows/manual.yaml
@@ -1,5 +1,9 @@
 name: Azure ML Job Pipeline Manual
-on: workflow_dispatch
+on: 
+  workflow_dispatch:
+  push:
+    branches:
+      - main
 
 env:
   GROUP: mlops-at-home
@@ -25,7 +29,7 @@ jobs:
       - name: Azure test - Get Compute
         uses: Azure/CLI@v2.0.0
         with:
-          azcliversion: 2.61.0 # Currently the latest, but best to specify for reproducibility
+          azcliversion: 2.59.0 # Best to specify for reproducibility
           inlineScript: |
             az extension add --name ml -y --debug
             az configure --defaults group=$GROUP workspace=$WORKSPACE location=$LOCATION --debug
