--- a/.github/workflows/manual.yaml
+++ b/.github/workflows/manual.yaml
@@ -29,8 +29,8 @@ jobs:
       - name: Azure test - Get Compute
         uses: Azure/CLI@v2.0.0
         with:
-          azcliversion: 2.59.0 # Best to specify for reproducibility
+          azcliversion: 2.53.0 # Best to specify for reproducibility
           inlineScript: |
-            az extension add --name ml -y --debug
+            az extension add --name ml --debug
             az configure --defaults group=$GROUP workspace=$WORKSPACE location=$LOCATION --debug
             az ml compute list --debug
